[tool.poetry]
name = "home-repeate"
version = "0.1.0"
description = ""
authors = ["Dima2024-python <chagaydapython2024@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
